styles/style.css
/* ... */
.work-page-grid-item {
  position: relative;
  width: 100%;
  display: block;
  overflow: hidden;
}

.work-page-grid-item figure {
  margin: 0;
  display: block;
}

.work-page-grid-item img {
  width: 100%;
  display: block;
}

/* Let the image define the height of the parent */
.work-page-grid-item {
  height: auto;
}

.project-page-grid-item {
  width: 100%;
  aspect-ratio: 4 / 3;
  overflow: hidden;
  display: block;
  position: relative;
}

.project-grid {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  list-style: none;
  padding: 0;
  margin: 0;
}

.project-page-grid-item img {
  display: block;
  width: 100%;
  height: auto;
}

/* Overlay */
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 2em;
  background-color: var(--overlay-color);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.5s ease, visibility 0.5s ease;
  box-sizing: border-box;
  border-radius: 10px;
  pointer-events: none;
}

.work-page-grid-item:hover .overlay {
  opacity: 1;
  visibility: visible;
}

.project-category-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: auto;
}

.project-stella-category {
  max-width: fit-content;
  border-radius: 9rem;
  border: 1px solid #141414;
  padding: 0.75rem 1.5rem;
  margin: 1rem 0.75rem 0 0;
  font-size: 1rem;
  background: #141414;
  color: var(--overlay-color);
}
/* 

 █████  ██████   ██████  ██    ██ ████████ 
██   ██ ██   ██ ██    ██ ██    ██    ██    
███████ ██████  ██    ██ ██    ██    ██    
██   ██ ██   ██ ██    ██ ██    ██    ██    
██   ██ ██████   ██████   ██████     ██    
                                           
*/

.about {
  display: flex;
  flex: 1;
  width: 75%;
  background: var(--background-color-about);
  min-height: 100vh;
  list-style: none;
  gap: 0rem; /* Adds space between columns */
  padding-top: 2.5rem;
}

/* Column 1: Profile Image */
.about-item-1 {
  flex: 0 1 20%; /* The first number is the flex-grow, the second is flex-shrink, and the third is the flex-basis */
  border-left: 1.5px solid #f9f5ed;
  border-right: 1.5px solid #bcb73d;
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

/* The image will be centered in its container */
.about-image {
  display: flex;
  justify-content: center;
}

/* Column 2: Main content */
.about-content-col {
  flex: 2; /* This takes up more space than the first column */
  padding-left: 0.5rem;
  padding-right: 3.5rem;
}

.about-title {
  padding-bottom: 1rem;
}

.about-bio {
  padding-bottom: 3rem;
}

.about-contact-list {
  padding-bottom: 1rem;
  font-style: #bcb73d;
}

.about-content-list {
  padding-bottom: 2rem;
}

.about-services-list {
  list-style-type: disc;
  padding-left: 1.5rem;
}

.about-services-list li p {
  margin: 0;
}
/* Global Footer

███████  ██████   ██████  ████████ ███████ ██████  
██      ██    ██ ██    ██    ██    ██      ██   ██ 
█████   ██    ██ ██    ██    ██    █████   ██████  
██      ██    ██ ██    ██    ██    ██      ██   ██ 
██       ██████   ██████     ██    ███████ ██   ██ 
                                                   
*/

.global-footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2.5rem 2.5rem;
  padding-bottom: 1rem;
  background-color: var(--background-color-footer);
  text-align: center;
  border-top: 1.5px solid #f9f5ed;
  gap: 0.5rem;
  margin-top: auto;
}

.copyright {
  margin: 0;
  color: var(--primary-text-color);
}

/* Project Page 

██████  ██████   ██████       ██ ███████  ██████ ████████     ██████   █████   ██████  ███████ 
██   ██ ██   ██ ██    ██      ██ ██      ██         ██        ██   ██ ██   ██ ██       ██      
██████  ██████  ██    ██      ██ █████   ██         ██        ██████  ███████ ██   ███ █████   
██      ██   ██ ██    ██ ██   ██ ██      ██         ██        ██      ██   ██ ██    ██ ██      
██      ██   ██  ██████   █████  ███████  ██████    ██        ██      ██   ██  ██████  ███████ 
                                                                                               
*/

.project-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}

/* Sidebar */
.project-aside {
  position: sticky;
  top: 2.5rem;
  width: 20%;
  height: 100vh;
  flex-shrink: 0;
  display: flex;
  padding-left: 2.5rem;
  padding-top: 2.5rem;
  padding-bottom: 3rem;
  flex-direction: column;
  color: var(--project-sidebar-text-color);
  background: var(--project-sidebar-background-color);
}

.project-navigation {
  display: flex;
  flex-direction: row;
  flex: 1;
  align-items: flex-end;
  justify-content: space-between;
}

.project-info {
  padding-bottom: 30rem;
}

.portfolio-navigation {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.previous-button a h3,
.next-button a h3 {
  font-size: 1rem;
  text-decoration: none;
  color: #f9f5ed;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.previous-button a h3:hover,
.next-button a h3:hover {
  color: #bcb73d;
}
/* Base styles */
.topnav {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  background-color: #333;
  overflow: hidden;
}

.topnav a {
  color: #f2f2f2;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #141414;
  color: #bcb73d;
}

.hamburger-menu {
  display: none;
  background: none;
  border: none;
  cursor: pointer;
  color: #f9f5ed;
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.topnav.responsive {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #333;
  flex-direction: column;
  align-items: center;
  display: flex;
}

.topnav.responsive a {
  display: block;
  width: 100%;
  text-align: left;
}

.arrow {
  padding: 0;
}

.project-image-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
/* ... */

